--- a/requirements.txt
+++ b/requirements.txt
@@ -11,10 +11,12 @@ google-api-core==1.26.1
 google-auth==1.28.0
 google-cloud-core==1.6.0
 google-cloud-datastore==2.1.0
+google-cloud-pubsub==2.3.0
 google-cloud-storage==1.36.2
 google-crc32c==1.1.2
 google-resumable-media==1.2.0
 googleapis-common-protos==1.53.0
+grpc-google-iam-v1==0.12.3
 grpcio==1.36.1
 gunicorn==20.0.4
 idna==2.10
