IoT core functions and set up added

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,9 @@ google-cloud-datastore==2.1.0
 google-cloud-pubsub==2.3.0
 google-cloud-storage==1.36.2
 pylogflow==0.2.0
+google-api-python-client==2.1.0
+google-auth-httplib2==0.0.3
+cryptography==3.4.7
+pyjwt==2.0.1
+paho-mqtt==1.5.1
+google-cloud-iot==2.0.2
